--- a/index.html
+++ b/index.html
@@ -93,18 +93,25 @@
         <div class="modal-content">
             <span class="close" aria-label="Close">&times;</span>
             <h2 id="modal-prefs-title">Preferences</h2>
-            <label for="prefs-hard-mode">Hard Mode</label>
+            <label for="prefs-hard-mode" class="prefs-label">
             <input type="checkbox" name="prefs-hard-mode" id="prefs-hard-mode" class="prefs-check">
+            <span class="prefs-toggle"></span>
+            Hard Mode
+            </label>
             <br>
             <small>(Non sequential random numbers! Select before beginning a new game.)</small>
             <hr>
-            <label for="prefs-dark-mode">Dark Mode</label>
+            <label for="prefs-dark-mode" class="prefs-label">
             <input type="checkbox" name="prefs-dark-mode" id="prefs-dark-mode" class="prefs-check">
-            <br>
-            <small>Auto set based on your computer preferences.</small>
+            <span class="prefs-toggle"></span>
+            Dark Mode
+            </label>
             <hr>
-            <label for="prefs-timer">Timer</label>
-            <input type="checkbox" name="prefs-timer" id="prefs-timer" class="prefs-check" checked="true">
+            <label for="prefs-timer" class="prefs-label">
+            <input type="checkbox" name="prefs-timer" id="prefs-timer" class="prefs-check" checked>
+            <span class="prefs-toggle"></span>
+            Timer
+            </label>
             <br>
             <small>Toggle the timer for answering.</small>
             <hr>
@@ -114,7 +121,9 @@
                         class="bi bi-github" viewBox="0 0 16 16">
                         <path
                             d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                    </svg> GitHub</a>
+                    </svg> GitHub</a>.
+                <br>
+                &copy David Kelly 2022.
             </p>
         </div>
     </aside>
@@ -222,7 +231,6 @@
                         FizzBuzz
                     </li>
                 </ul>
-            </p>
         </div>
     </aside>
 
