--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <title>Fizz Buzz</title>
 </head>
@@ -71,22 +72,35 @@
     </header>
 
     <main>
-        <br><br>
-        <span id="last-answer-display">Start counting from 1...</span>
-        <br><br>
-        <label id="timer-label" for="timer">Time Left:</label>
-        <br>
-        <progress id="timer" value="100" max="100">5 secs</progress>
-        <br><br>
-        <!-- Buttons to play the game with, can be clicked/tapped or use arrow keys -->
-        <button class="btn-game" id="btn-num" data-game-btn="number" aria-live="assertive">1</button>
-        <br>
-        <button class="btn-game" data-game-btn="fizz">Fizz</button>
-        <button class="btn-game" data-game-btn="buzz">Buzz</button>
-        <br>
-        <button class="btn-game" data-game-btn="fizzbuzz">Fizz<br>Buzz</button>
 
+        <section id="game-info">
+            <span id="last-answer-display">Start counting from 1...</span>
+            <br><br><br>
+            <label id="timer-label" for="timer">Time Left:</label>
+            <progress id="timer" value="100" max="100">5 secs</progress>
+        </section>
+
+        <section id="game-btns">
+            <!-- Buttons to play the game with, can be clicked/tapped or use arrow keys -->
+            <button class="btn-game" id="btn-num" data-game-btn="number" aria-live="assertive">1</button>
+            <br>
+            <button class="btn-game" data-game-btn="fizz">Fizz</button>
+            <button class="btn-game" data-game-btn="buzz">Buzz</button>
+            <br>
+            <button class="btn-game" data-game-btn="fizzbuzz">Fizz<br>Buzz</button>
+        </section>
     </main>
+
+    <footer>
+        <p class="prefs-text">
+            &copy David Kelly 2022. View on <a href="https://github.com/davidindub/fizzbuzz" target="_blank"
+                rel="noopener" aria-label="GitHub repository for this project (opens in a new tab)"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                </svg> GitHub</a>.
+    </footer>
 
     <!-- A Preferences Modal -->
     <aside class="modal" role="dialog" aria-labelledby="modal-prefs-title">
@@ -94,36 +108,26 @@
             <span class="close" aria-label="Close">&times;</span>
             <h2 id="modal-prefs-title">Preferences</h2>
             <label for="prefs-hard-mode" class="prefs-label">
-            <input type="checkbox" name="prefs-hard-mode" id="prefs-hard-mode" class="prefs-check">
-            <span class="prefs-toggle"></span>
-            Hard Mode
+                <input type="checkbox" name="prefs-hard-mode" id="prefs-hard-mode" class="prefs-check">
+                <span class="prefs-toggle"></span>
+                Hard Mode
             </label>
             <br>
-            <small>(Non sequential random numbers! Select before beginning a new game.)</small>
-            <hr>
-            <label for="prefs-dark-mode" class="prefs-label">
-            <input type="checkbox" name="prefs-dark-mode" id="prefs-dark-mode" class="prefs-check">
-            <span class="prefs-toggle"></span>
-            Dark Mode
-            </label>
+            <p class="prefs-text">Non sequential random numbers!</p>
             <hr>
             <label for="prefs-timer" class="prefs-label">
-            <input type="checkbox" name="prefs-timer" id="prefs-timer" class="prefs-check" checked>
-            <span class="prefs-toggle"></span>
-            Timer
+                <input type="checkbox" name="prefs-timer" id="prefs-timer" class="prefs-check" checked>
+                <span class="prefs-toggle"></span>
+                Timer
             </label>
             <br>
-            <small>Toggle the timer for answering.</small>
+            <p class="prefs-text">Toggle the timer for answering.</p>
             <hr>
-            <p>
-                View this project on <a href="https://github.com/davidindub/fizzbuzz" target="_blank"><svg
-                        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-github" viewBox="0 0 16 16">
-                        <path
-                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                    </svg> GitHub</a>.
-                <br>
-                &copy David Kelly 2022.
+            <label for="prefs-dark-mode" class="prefs-label">
+                <input type="checkbox" name="prefs-dark-mode" id="prefs-dark-mode" class="prefs-check">
+                <span class="prefs-toggle"></span>
+                Dark Mode
+            </label>
             </p>
         </div>
     </aside>
