Add sound effects

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
             <button class="btn-game" data-game-btn="buzz">Buzz</button>
             <br>
             <button class="btn-game" data-game-btn="fizzbuzz">Fizz<br>Buzz</button>
+            <audio id="sound-game-over" class="visually-hidden">
+                <source src="assets/sounds/game-over.m4a">
+                </audio>
+                <audio id="sound-right-answer" class="visually-hidden">
+                    <source src="assets/sounds/right-answer.m4a">
+                    </audio>
         </section>
     </main>
 
