Change font to improve readability

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <title>Fizz Buzz</title>
 </head>
@@ -99,7 +98,7 @@
 
     <footer>
         <p class="prefs-text">
-            &copy David Kelly 2022. View on <a href="https://github.com/davidindub/fizzbuzz" target="_blank"
+            &copy; David Kelly 2022. View on <a href="https://github.com/davidindub/fizzbuzz" target="_blank"
                 rel="noopener" aria-label="GitHub repository for this project (opens in a new tab)"><svg
                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
                     viewBox="0 0 16 16">
@@ -134,7 +133,12 @@
                 <span class="prefs-toggle"></span>
                 Dark Mode
             </label>
-            </p>
+            <hr>
+            <label for="prefs-sounds" class="prefs-label">
+                <input type="checkbox" name="prefs-sounds" id="prefs-sounds" class="prefs-check" checked>
+                <span class="prefs-toggle"></span>
+                Sound Effects
+            </label>
         </div>
     </aside>
     <!-- A statistics modal -->
