Improve responsiveness, add shake animation

--- a/index.html
+++ b/index.html
@@ -167,7 +167,13 @@
                 </tbody>
             </table>
             <hr>
-            <p>Total games played: <span id="games-played-display"></span></p>
+            <p>
+            Latest Score: <span id="stats-last-score"></span>
+            </p>
+            <hr>
+            <p>
+            Total Games Played: <span id="stats-games-played"></span>
+            </p>
             <hr>
             <div id="stats-btns">
                 <button id="btn-share" class="btn-stats btn-share">
