Add color to game over, feedback on sound toggle

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <main>
 
-        <section id="game-info">
-            <span id="last-answer-display">Start counting from 1...</span>
+        <section class="game-info">
+            <span id="game-info-text">Start counting from 1...</span>
             <label id="timer-label" for="timer">Time Left:</label>
             <progress id="timer" value="100" max="100" class="visually-hidden">5 secs</progress>
         </section>
@@ -149,7 +149,7 @@
                 <thead>
                     <tr>
                         <th>Mode</th>
-                        <th>Score</th>
+                        <th>High Score</th>
                         <th>Date</th>
                     </tr>
                 </thead>
@@ -168,7 +168,7 @@
             </table>
             <hr>
             <p>
-            Latest Score: <span id="stats-last-score"></span>
+            Last Score: <span id="stats-last-score"></span>
             </p>
             <hr>
             <p>
