Clarify rules and fix typos in README

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <br>
                 If it is divisible by five choose <strong>Buzz</strong>.
                 <br>
-                If it is divisible by fifteen choose <strong>FizzBuzz</strong>.
+                If it is divisible by three <strong>and</strong> five choose <strong>FizzBuzz</strong>.
                 <br>
                 Otherwise select the Number.
             </p>
